# Halcon_Ros_Intergration

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/ros_halcon_bridge/: Lego.h
catkin_ws/devel/share/asr_halcon_bridge/cmake/: asr_halcon_bridgeConfig.cmake
catkin_ws/devel/share/common-lisp/ros/ros_halcon_bridge/msg/: Lego.lisp  _package.lisp  _package_Lego.lisp  ros_halcon_bridge-msg.asd
catkin_ws/devel/share/gennodejs/ros/ros_halcon_bridge/msg/: Lego.js  _index.js
catkin_ws/devel/share/ros_halcon_bridge/cmake/: ros_halcon_bridge-msg-extras.cmake  ros_halcon_bridge-msg-paths.cmake  ros_halcon_bridgeConfig.cmake
catkin_ws/devel/share/roseus/ros/ros_halcon_bridge/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_halcon_bridge/msg/: Lego.l
catkin_ws/src/ros_halcon_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/ros_halcon_bridge/launch/: backgroundSub.launch  cam.launch  legos.launch  run.launch  treshholdCam.launch
catkin_ws/src/ros_halcon_bridge/msg/: Lego.msg
catkin_ws/src/ros_halcon_bridge/scripts/: gcodeToTwist.py  input.gcode
catkin_ws/src/ros_halcon_bridge/src/: CoordinatorUSBcamx80svOnBoard017_sax.py  background_extraction.cpp  dilation.cpp  erosion.cpp  legos.cpp  legosUnedited.cpp  treshhold.cpp
files/: readme.txt  setup.sh
halcon_test_files/background_subtractions/: legos.hdev  main.hdev
